# poco

./: CMakeLists.txt
Foundation/: CMakeLists.txt
Net/: CMakeLists.txt
XML/: CMakeLists.txt
cmake/: FindMC.cmake
